# Infinity-Tomographic-Reconstruction

./: README.md  __init__.py  add_header.py  creating_documentation.ps1  oldsetup.py  pyproject.toml  setup.py
.github/workflows/: branch-name-check.yml
dataFiles/: BGO_photoelectric_absortion.csv  CSI_photoelectric_absortion.csv  LSO_photoelectric_absortion.csv  LYSO_photoelectric_absortion.csv  LYSO_photoelectric_absortion_1x.csv  NaI_photoelectric_absortion.csv  YAP_photoelectric_absortion.csv  b_values.npy  b_values_at.npy  gpu_surface  inflex_points_x.npy  m_values.npy  m_values_at.npy  max_D.npy
dataFiles/Moby settings/: moby_parfile.par
docs/: .buildinfo  AnalyticalReconstruction.html  Corrections.CT.Projector.html  Corrections.CT.html  Corrections.Compton.html  Corrections.EasyPET.Normalization.html  Corrections.EasyPET.SystemFocus.html  Corrections.PET.Attenuation.html  Corrections.PET.DOI.html  Corrections.PET.DecayCorrection.html  Corrections.PET.EnergyCorrection.html  Corrections.PET.Projector.html  Corrections.PET.html  Corrections.html  Designer.html  DetectionLayout.Collimators.html  DetectionLayout.Modules.html  DetectionLayout.Photodetectors.Crystals.html  DetectionLayout.Photodetectors.html  DetectionLayout.RadiationProducer.html  DetectionLayout.Semicondutors.html  Device.html  EasyPETLinkInitializer.EasyPETDataReader.html  EasyPETLinkInitializer.Preprocessing.html  EasyPETLinkInitializer.Utilities.html  EasyPETLinkInitializer.html  GateLink.GateToTor.html  GateLink.RootToTor.html  GateLink.ToRToGate.html  GateLink.html  Geometry.LinearPET.html  Geometry.SPIRAL.html  Geometry.Standard.html  Geometry.easyPETBased.html  Geometry.html  ImageReader.DICOM.html  ImageReader.Interfile.html  ImageReader.html  Metrics.ImageQuality.html  Metrics.NEMA.html  (+59 more)
examples/: EasyPET_CT_reconstruction.py  SinogramTest.ipynb  createNewDevice.py  createTORFile.py
src/: __init__.py
temp_files/: easyPET_new.mac  scanner1.mac  scanner2.mac
tests/: radioisotopeTest.py  test_easyct_parametric_points.py  test_microderenzo.py  test_versions.py
utils/: automatically_documentation_creation.py  automatically_issue_creation.py
(+796 files in other folders)
