[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel", "numpy", "scipy", "matplotlib", "vtk",
    "pydicom", "pycuda", "json5", "scikit-image"]
build-backend = "setuptools.build_meta"

[project]
name = "Infinity-Tomographic-Reconstruction"
dynamic =["version"]
description = "Tomographic reconstruction for different imaging modalities (PET, SPECT, CT, and Compton)"
readme = "README.md"
authors = [  { name = "Pedro Encarnação" }]
license = { text = "CC BY-NC-SA 4.0" }
requires-python = ">=3.9"
dependencies = [
]

urls = { "Homepage" = "https://github.com/DRIM-UA/Infinity-Tomographic-Reconstruction"}
[tool.setuptools_scm]
#version_file = "pkg/_version.py"

[tool.setuptools]

package-dir = {"" = "src"}
#packages = ["toor"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Recursively include all .c files in Optimizer and its subdirectories
#"toor" = ["Optimizer/**/*.c"]
##
#[tool.setuptools.include-package-data]
#include-package-data = true

#[tool.setuptools.extension]
#include-package-data = true
#
#[tool.setuptools.ext_modules]
#your_module = { sources = ["your_module.cpp"],  include-dirs = ["__NP_INCLUDE__"]}